pythonのversion指定変更

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,5 +1,9 @@
 #https://hub.docker.com/_/python(OS:Debian Linux)
-FROM python:3
+#Base Image
+FROM python:3.6
+
+#Upgrade pip
+RUN pip install --upgrade pip
 
 #コンテナで/codeディレクトリ作成
 RUN mkdir /code
@@ -9,17 +13,15 @@ WORLDIR /code
 #requirements.txtをコンテナにコピー
 COPY requirements.txt /code
 
+#requirements.txtに書かれているパッケージをインストール
+RUN pip install -r requirements.txt
 
 # opencv-devのインストール
 RUN apt-get update -y && apt-get install -y libopencv-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-
 #vimのインストール
 RUN apt-get update -y && apt-get install -y vim
 
-#requirements.txtに書かれているパッケージをインストール
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
 
