--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -8,10 +8,10 @@ RUN pip install --upgrade pip
 #コンテナで/codeディレクトリ作成
 RUN mkdir /code
 #作業ディレクトリ
-WORLDIR /code
+WORKDIR /code
 
 #requirements.txtをコンテナにコピー
-COPY requirements.txt /code
+COPY requirements.txt /code/
 
 #requirements.txtに書かれているパッケージをインストール
 RUN pip install -r requirements.txt
@@ -23,5 +23,7 @@ RUN apt-get update -y && apt-get install -y libopencv-dev \
 
 #vimのインストール
 RUN apt-get update -y && apt-get install -y vim
+
+
 
 
